# knowledge_system

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: LAYER_BY_LAYER_ROADMAP.md
data/: __init__.py  schema.sql
data/adapters/constituent_relationship_manager/: __init__.py
data/adapters/writing_schedule/: __init__.py  parser.py  schema.py
data/basic_entities/: __init__.py  dev_team.py  schedule_task.py
data/blueprints/: __init__.py  task_blueprints.py
data/common/: __init__.py  parsing.py
data/entities/: __init__.py  dev_team.py  document.py  funder.py  grant.py  loi.py  opportunity.py  proposal.py  prospect.py  report.py  value_objects.py
data/services/: __init__.py  orchestrator.py  status_semantics.py  writing_schedule_decomposer.py
docs/: ARCHITECTURE.md  Categoriae Layer: Domain Entities.md  data_transformation_pipeline.md  entity_relationships.md  final_architecture_summary.md
scripts/: import_writing_schedule.py
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
tests/unit/entities/: __init__.py  test_dev_team.py  test_document.py  test_funder.py  test_grant.py  test_schedule_task.py
tests/unit/services/: __init__.py  test_writing_schedule_decomposer.py
